--- a/giaodien/style.css
+++ b/giaodien/style.css
@@ -8,6 +8,7 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 12px 200px;
+    width: 100%;
     height: 90px;
     align-items: center;
     background-color: #1db3ea;
@@ -22,6 +23,10 @@ a {
 .logo {
     flex: 1;
     align-items: center;
+}
+#logo {
+    width: 100%;
+    height: 60px;
 }
 .others {
     padding: 30px;
