--- a/giaodien/style.css
+++ b/giaodien/style.css
@@ -41,17 +41,27 @@ a {
     display: flex;
 }
 .menu > li {
-    padding: 30px;
+    padding: 15px 50px;
     position: relative;
+}
+.menu > li:hover{
+    background-color: #000000;
+    border: 0px solid;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px 0 rgba(252, 252, 252, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);  
+    outline-color: rgba(255, 255, 255, 0);
+    outline-offset: 15px;
+    display: block;
 }
 .menu > li:hover .sub-menu {
     display: block;
 }
+
 .sub-menu {
     position: absolute;
     color: #000000;
     width: max-content;
-    top: 55px;
+    top: 40px;
     padding: 10px 20px 10px 20px;
     border: 0px solid #4a4c4f;
     border-radius: 8px;
