--- a/web/styles/style.css
+++ b/web/styles/style.css
@@ -86,7 +86,7 @@ a {
     border-radius: 8px;
     background-color: #ffffff;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);  
-    padding: 5px 15px;
+    padding: 3% 15px;
 }
 .menu > li > a {
     font-size: 18px;
