--- a/web/styles/style.css
+++ b/web/styles/style.css
@@ -107,9 +107,20 @@ input[type=text] {
     display: flex;
     flex: 3
 }
-.other li {
-    padding: 0 15px;
+.other button {
+    margin: 2%;
+    padding: 5px 10px;
     position: relative;
+}
+.button {
+    color: #ffffff;
+    font-size: 16px;
+    padding: 2%;
+}
+.button:hover{
+    border: 0px solid #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);  
 }
 #ic-giohang {
     height: 40px;
