Đổi màu khi hover button

--- a/web/styles/style.css
+++ b/web/styles/style.css
@@ -115,12 +115,11 @@ input[type=text] {
 .button {
     color: #ffffff;
     font-size: 16px;
-    padding: 2%;
 }
 .button:hover{
     border: 0px solid #ffffff;
     border-radius: 8px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);  
+    box-shadow: 0 4px 8px 0 rgb(255, 255, 255), 0 6px 20px 0 rgb(255, 255, 255);  
 }
 #ic-giohang {
     height: 40px;
